--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<!-- Page Title -->
 	<title>Under Maintenance </title>
+	<link rel="icon" type="image/x-icon" href="/images/favicon.png">
 	<!-- Google Fonts css-->
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700" rel="stylesheet">
 	<!-- Bootstrap css -->
