--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<a href="#"><i class="fa fa-twitter"></i></a>
 							<a href="#"><i class="fa fa-linkedin"></i></a>
 							<a href="#"><i class="fa fa-pinterest"></i></a>
-							<a href="<a href="#"><i class="fa fa-pinterest"></i></a>"><i class="fa fa-instagram"></i></a>
+							<a href="https://www.instagram.com/brandskulptmedia?igsh=em1qczV0ZG5qcXQ="><i class="fa fa-instagram"></i></a>
 						</div>
 						<!-- Social Media end -->	
 					</div>
